[metadata]
name = gradual-ml-gmlExplore
version = 1.0.0
author = gml team
author_email = gmlexplore@gmail.com
description = gradual-ml is a Python package that provides for Gradual Machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gml-explore/gradual-ml
project_urls =
    Bug Tracker = https://github.com/gml-explore/gradual-ml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src